js/js.translator/testData/incremental/invalidation/fakeOverrideInlineFunction/lib2/l2.kt
class ClassB: ClassA() {
    override fun test1() = "ClassB::test1".castTo<String>()
    override fun test2() = 1.castTo<String>()
}
